--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.1",
+        "@types/graphql": "^14.5.0",
         "husky": "^3.0.4",
         "typescript": "^3.5.3"
     },
     "dependencies": {
         "express": "^4.17.1",
-        "fast-string-search": "^1.4.1"
+        "graphql": "^14.5.3"
     },
     "husky": {
         "hooks": {
